Added required element
header nav

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
   </ul>
 
   <header>
-    <img src="images/logo.svg" alt="">
-    <h1>The Solar System—our home in the stars</h1>
+    <nav>
+      <img src="images/logo.svg" alt="">
+      <h1>The Solar System—our home in the stars</h1>
+    </nav>
   </header>
 
   <main>
