Replaced some li with a

--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
 </head>
 <body>
 
-  <ul>
-    <li>Stars</li>
-    <li>Terrestrial planets</li>
-    <li>Gas giants</li>
-    <li>Dwarf planets</li>
-    <li>Asteroids</li>
-    <li>Comets</li>
-  </ul>
-
   <header>
     <nav>
+      <ul>
+        <li>
+          <a href="">Stars</a>
+          <a href="">Terrestrial planets</a>
+          <a href="">Gas giants</a>
+          <a href="">Dwarf planets</a>
+          <a href="">Asteroids</a>
+          <a href="">Comets</a>
+        </li>
+      </ul>
       <img src="images/logo.svg" alt="">
       <h1>The Solar System—our home in the stars</h1>
     </nav>
