Added figure and figurecaption

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
           <a href="">Comets</a>
         </li>
       </ul>
+    <figure>
       <img src="images/logo.svg" alt="">
-      <h1>The Solar System—our home in the stars</h1>
+    </figure>
+      <figurecaption><h1>The Solar System—our home in the stars</h1></figurecaption>
     </nav>
   </header>
 
