Moved figurecaption out of figure

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 
   <figure>
     <img src="images/logo.svg" alt="">
-    <figurecaption><h1>The Solar System—our home in the stars</h1></figurecaption>
   </figure>
+
+  <figurecaption>
+    <h1>The Solar System—our home in the stars</h1>
+  </figurecaption>
 
   <main>
     <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
