Removed h1 from figurecaption

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
   <figure>
     <img src="images/logo.svg" alt="">
+    <figurecaption>
+      The Solar System—our home in the stars
+    </figurecaption>
   </figure>
 
   <main>
@@ -33,7 +36,5 @@
   </main>
 
 </body>
-<figurecaption>
-  <h1>The Solar System—our home in the stars</h1>
-</figurecaption>
+
 </html>
