Changed banner placement
Inside main

--- a/index.html
+++ b/index.html
@@ -22,17 +22,15 @@
     </nav>
   </header>
 
-  <figure>
-    <img src="images/logo.svg" alt="">
-    <figurecaption>
-      The Solar System—our home in the stars
-    </figurecaption>
-  </figure>
+  <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+  <img src="images/banner.svg" alt="">
+  <a href="https://www.wikipedia.org">Wikipedia</a>
 
   <main>
-    <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+    <figure>
     <img src="images/banner.svg" alt="">
-    <a href="https://www.wikipedia.org">Wikipedia</a>
+    <figurecaption>The Solar System—our home in the stars</figurecaption>
+    </figure>
   </main>
 
 </body>
