--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   </header>
 
   <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
-  <img src="images/banner.svg" alt="">
+  <img src="images/logo.svg" alt="">
   <a href="https://www.wikipedia.org">Wikipedia</a>
 
   <main>
     <figure>
     <img src="images/banner.svg" alt="">
-    <figurecaption>The Solar System—our home in the stars</figurecaption>
+    <figcaption>The Solar System—our home in the stars</figcaption>
     </figure>
   </main>
 
