--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 
   <header>
+    <h1>This is a header</h1>
     <nav>
       <ul>
         <li>
@@ -28,8 +29,8 @@
 
   <main>
     <figure>
-    <img src="images/banner.svg" alt="">
-    <figcaption>The Solar System—our home in the stars</figcaption>
+      <img src="images/banner.svg" alt="">
+      <figcaption>The Solar System—our home in the stars</figcaption>
     </figure>
   </main>
 
